--- a/main.html
+++ b/main.html
@@ -3,19 +3,23 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+	 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button id="button-1" class="btn btn-primary">Button-1</button>
-	<button id="button-2" class="btn btn-outline-secondary">Button-2</button>
-	<button id="button-3" class="btn btn-success btn-lg">Button-3</button>
-	<button id="button-4" class="btn btn-danger btn-sm">Button-4</button>
-	<button id="button-5" class="btn btn-warning btn-lg btn-block">Button-5</button>
-	<button id="button-6" class="btn btn-info disabled">Button-6</button>
-	<button id="button-7" class="btn btn-light">Button-7</button>
-	<button id="button-8" class="btn btn-link">Button-8</button>
+	<button type="button" class="btn btn-primary" id="button-1">Button-1</button>
+	<button type="button" class="btn btn-outline-secondary" id="button-2">Button-2</button>
+	<button type="button" class="btn btn-success btn-lg "id="button-3">Button-3</button>
+	<button type="button" class="btn  btn-danger btn-sm" id="button-4">Button-4</button><br>
+	<div class="row">
+	<button type="button" class="btn btn-warning btn-lg btn-block" id="button-5">Button-5</button>
+	</div>
+	<button type="button" class="btn btn-info disabled" id="button-6">Button-6</button>
+	<button type="button" class="btn btn-light border" id="button-7">Button-7</button>
+	<button type="button" class="btn btn-link" id="button-8">Button-8</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
